fix(YALB-520): icon underlined
Feedback from Kara was that inline links with text look strange without
the icon associated being underlined as well.  This changes the margin
buffer to a padding buffer so that it will be underlined as well.

--- a/web/profiles/custom/yalesites_profile/modules/custom/ys_links/css/ys_links.css
+++ b/web/profiles/custom/yalesites_profile/modules/custom/ys_links/css/ys_links.css
@@ -5,5 +5,8 @@
 
 a.ys_linked {
   display: inline-block !important;
-  margin-right: 15px;
+}
+
+a.ys_linked.link--with-icon i {
+  padding-right: 13px;
 }
